<resources>
    <string name="app_name">Marvel App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">splash screen</string>
    <string name="skip">Skip</string>
    <string name="desc">Welcome to the Marvel Universe</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipis Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipis Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipis Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipislabore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="log_in">Log In</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="registration">Registration</string>
    <string name="more_news">more news</string>
    <string name="categories">Categories</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="the_cast">The Cast</string>
    <string name="credit_card">Credit Card</string>
    <string name="valid_thru">00/00</string>
    <string name="cv">000</string>
    <string name="confirm">confirm</string>
    <string name="comics_market">Comics Market</string>
    <string name="price">Price:</string>
    <string name="count">$0.00</string>
    <string name="buy">buy</string>
    <string name="comic_book">Comic Book</string>
    <string name="shop">Shop</string>
    <string name="home">Home</string>
    <string name="storyline">Storyline</string>

</resources>