<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical">

    <TextView
        style="@style/Base.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_credit_card" />

    <EditText
        android:id="@+id/etCard"
        style="@style/Auth.Edit.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_credit_card"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etValidThru"
            style="@style/Auth.Edit.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_valid_thru"
            android:hint="@string/valid_thru"
            android:inputType="number"
 />

        <EditText
            android:id="@+id/etCv"
            style="@style/Auth.Edit.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cv"
            android:inputType="number"
            android:hint="@string/cv" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        style="@style/Base.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm" />
</LinearLayout>