<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="28dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@color/purple_200" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/count"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tvPrice"
            app:layout_constraintStart_toEndOf="@id/tvPrice" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_favorite"
            app:layout_constraintBottom_toTopOf="@id/btnBuy"
            app:layout_constraintStart_toStartOf="@id/tvPrice"
            app:layout_constraintTop_toBottomOf="@id/tvPrice" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_buy"
            android:id="@+id/btnBuy"
            style="@style/Auth.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:backgroundTint="@color/red"
            android:text="@string/buy"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvPrice" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>